[FEATURE] Add background overlay ability

--- a/addon/templates/components/basic-dropdown.hbs
+++ b/addon/templates/components/basic-dropdown.hbs
@@ -24,6 +24,7 @@
     dir=dir
     dropdownClass=dropdownClass
     dropdownId=dropdownId
+    overlay=overlay
     horizontalPositionClass=_horizontalPositionClass
     onFocusIn=(action 'handleFocusIn')
     onFocusOut=(action 'handleFocusOut')
