--- a/addon/templates/components/basic-dropdown/content.hbs
+++ b/addon/templates/components/basic-dropdown/content.hbs
@@ -1,3 +1,6 @@
+{{#if overlay}}
+  <div class="ember-basic-dropdown-overlay"></div>
+{{/if}}
 <div id={{dropdownId}} class="ember-basic-dropdown-content {{transitionClass}} {{dropdownClass}} {{verticalPositionClass}} {{horizontalPositionClass}}" dir={{dir}}>
   {{yield}}
 </div>
