--- a/app/styles/ember-basic-dropdown.scss
+++ b/app/styles/ember-basic-dropdown.scss
@@ -1,5 +1,6 @@
 $ember-basic-dropdown-content-background-color: #FFF !default;
 $ember-basic-dropdown-content-z-index: 1000 !default;
+$ember-basic-dropdown-overlay-background: rgba(0,0,0, 0.5) !default;
 
 .ember-basic-dropdown {
   position: relative;
@@ -25,4 +26,15 @@ $ember-basic-dropdown-content-z-index: 1000 !default;
   width: auto;
   z-index: $ember-basic-dropdown-content-z-index;
   background-color: $ember-basic-dropdown-content-background-color;
+}
+
+.ember-basic-dropdown-overlay {
+  position: fixed;
+  background: $ember-basic-dropdown-overlay-background;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  pointer-events: none;
 }
